--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,10 @@
   margin: 0px;
   box-sizing: border-box;
   background: #fff;
+  overflow: clip;
 }
 
 body {
   text-align: center;
+  height: 100dvh;
 }
